tests in progress with new mongo indexes

--- a/sections/links.jade
+++ b/sections/links.jade
@@ -2,14 +2,9 @@ block links
 
   h2 Links
 
-  .link.right-link 
-    a(href="https://medium.com/message/ferguson-is-also-a-net-neutrality-issue-6d2f3db51eb0") Ferguson crisis and how Facebook penalizes content 
-    .smaller (6 minutes reading) by 
-      a(href="https://twitter.com/zeynep") Zeynep Tufekci
-
   .link.left-link 
-    a(href="https://theintercept.com/2016/06/09/facebook-outreach-tool-ignores-black-lives-matter/") Facebook outreach tool ignores Black Lives Matter
-    
+    a(href="https://www.propublica.org/article/facebook-doesnt-tell-users-everything-it-really-knows-about-them") Facebook Doesn’t Tell Users Everything it Really Knows About Them
+
   .link.right-link 
     a(href="https://www.theguardian.com/technology/2016/jun/07/its-your-duty-to-complain-thats-how-companies-improve") With big tech business making regular political and ethical blunders, it is our responsibility to complain – and let them know they must do better
 
@@ -39,3 +34,4 @@ block links
 
   .link.left-link
     a(href="http://commondreams.org/views/2016/07/14/whats-good-facebook-not-so-good-democracy") What's good for facebook is not so good for democracy
+
