timido cleanstyle del json.html

--- a/sections/revision.jade
+++ b/sections/revision.jade
@@ -52,5 +52,5 @@ html
                 h3
                     a(id="bysnippet") The user saw this
                 div.snippet(id='render')
-
+ script 
         div.footer 
