improved /impact page

--- a/sections/impact.jade
+++ b/sections/impact.jade
@@ -25,6 +25,24 @@ html
                 a(href="https://responsibledata.io/social-media-intelligence-the-wayward-child-of-open-source-intelligence/") Aware of the risks posed by social media intelligence
                 |, we aim to enable users awareness, but prevent abuses.
 
+        .simpletext
+            p Raw numbers
+            table
+                thead
+                    tr 
+                        th.col-sm-1 supporters
+                        th.col-sm-1 timelines
+                        th.col-sm-1 impressions
+                        th.col-sm-1 htmls
+                        th.col-sm-1 accesses
+                tbody
+                    tr 
+                        th.col-sm-1 #{supporters}
+                        th.col-sm-1 #{timelines}
+                        th.col-sm-1 #{impressions}
+                        th.col-sm-1 #{htmls}
+                        th.col-sm-1 #{accesses}
+
     .container-fluid
         .simpletext
             h2 Impressions collected
