testing hourly table initialization logic

--- a/sections/realitycheck/landing.jade
+++ b/sections/realitycheck/landing.jade
@@ -21,13 +21,10 @@ html
 
         div.realitycontainer
             h1 RealityCheck
-            div.vizavail This system is based on open API, you can create new visualisation and integrate your analysis here. 
-            div.vizavail Our previously 
-                a(href="https://twitter.com/pciuccarelli/status/799362580125024256") Cool visualization
-                |  shall be soon operative again. 
-            div.vizavail Soon, this page should be 
-                b accessible only by the supporter
-                |, access can be shared upon owner decisions.
+            p.text This page is intended to offer you a step back from your social media immersion. See your informations exposure more clearly and
+                b let you
+                | judge if is it OK, or, if your informative diet might be different. 
+            p.text Is a work in progress and if you are good with data visualisation, we can extend our APIs
 
         // debug: #{timelines} #{distance} #{lastActivity} #{userId}
 
