--- a/sections/webscripts/revision.css
+++ b/sections/webscripts/revision.css
@@ -8,7 +8,7 @@
 .infoblock h3 {
     text-align: center;
     font-style: uppercase;
-    font-color: '#3c5a99';
+    color: '#3c5a99';
 };
 
 .forms {
@@ -36,3 +36,6 @@
     color '#66b032;'
 }
 
+.metaentry {
+    font-size: 12px;
+}
