add tohacknight slides

--- a/sections/talks/landing.jade
+++ b/sections/talks/landing.jade
@@ -45,6 +45,15 @@ html
             th Video
             th Language
         tbody
+           tr
+            td 23st February '17
+            td Toolbox Coworking, Turin
+            td 
+              a(href="/talks-torinohacknight/") Torino Hack Night
+              | 
+              a(href="https://www.eventbrite.com/e/biglietti-torino-hacknight-tracking-exposed-31488474876") [event]
+            td 
+            td Italian
           tr
             td 2nd December '16
             td cantiere, Milan
