--- a/sections/realitycheck/data.jade
+++ b/sections/realitycheck/data.jade
@@ -20,7 +20,7 @@ html
 
         title facebook.tracking.exposed RealityCheck - your data
 
-    body(onload="loadHTMLs(getSupporterId(), '#contributionBlock'); loadContribution(getSupporterId(), '#contributionTable'); loadPromoted(getSupporterId(), '#promotedTable');")
+    body(onload="loadHTMLs(getSupporterId(), '#contributionBlock'); loadPromoted(getSupporterId(), '#promotedTable');")
 
         include intro
         include userNavbar
@@ -33,13 +33,8 @@ html
             div#contributionBlock
 
         div.container-fluid.realitycontainer
-            h3 Impressions submitted in the last 10 days 
-            div#contributionTable
-
-        div.container-fluid.realitycontainer
             h3 Promoted analysis
             p This is a detailed list on who is promoting your feed
-            div#promotedTable
 
         div.container-fluid.realitycontainer
             table#promotedTable.display(cellspacing='0', width='100%')
