centered and fluid container

--- a/sections/NetherlandsElections.jade
+++ b/sections/NetherlandsElections.jade
@@ -18,9 +18,9 @@ html
     include header
     include navbar
 
-  div.container.highlight This message is intended for researchers and journalists concerned by Facebook influence over national election (or other politically sensitive topic, as referendum, strike, protests, campaigns …) 
+  div.container-fluid.highlight This message is intended for researchers and journalists concerned by Facebook influence over national election (or other politically sensitive topic, as referendum, strike, protests, campaigns …) 
 
-  div.container.block
+  div.container-fluid.block
 
     p.paragraph 
       b We focus on the Netherland elections call. See below if the topic appears often in your Facebook newsfeed, before the 15 of March 2017.
@@ -30,9 +30,9 @@ html
     p.paragraph Our proposal is to analyse the interplay between the way information is algorithmically structured and the resulted informed agency. In particular, we focus on how facebook’s personalization algorithms present reality to users and how the differences in the realities so presented influence agents’ capacity for informed decision-making. 
     p.paragraph facebook.tracking.exposed is a tool designed to collect time-sensitive evidences from each users’ reality, the one created for them by personalization algorithms. Our goal is to provide a structured set of evidences  that can be used after the election for research and analysis.
 
-  div.container.highlight How to use facebook.tracking.exposed
+  div.container-fluid.highlight How to use facebook.tracking.exposed
 
-  div.container.block
+  div.container-fluid.block
 
     p.paragraph Just go to 
       a(href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi") and install the web extension for Chrome 
@@ -42,9 +42,9 @@ html
 
     p.paragraph The public post appearing in your timeline would be saved and available along all the other submitted data from the netherlands. This will allow to see, for example, which posts were promoted by whom; if the likes where growing homogeneously; if the comments share artificial or human patterns of distribution. There are a number of analysis that can be performed with this set of data; however, in order to ensure the validity of any analysis, it is crucial to spread the browser extension between an heterogeneous set of users. In this way, the social network realities of the users before the election can be properly recorder.
 
-  div.container.highlight FAQ
+  div.container-fluid.highlight FAQ
 
-  div.container.block
+  div.container-fluid.block
 
     p.paragraph If you've any question, feel free to write to 
       b support at tracking dot exposed
