--- a/sections/team.jade
+++ b/sections/team.jade
@@ -58,7 +58,7 @@ html
                         td Policy
                     tr
                         td 
-                            a(href="https://twitter.com/osd_it" target="blank") OpenSensorData
+                            a(href="https://twitter.com/osd_it" target="blank") OpenSensorsData
                         td Advisor (
                             a(href="https://twitter.com/raimondian" target="blank") Andrea Raimondi
                             |, 
