--- a/sections/realitycheck/profile.jade
+++ b/sections/realitycheck/profile.jade
@@ -1,18 +1,7 @@
 doctype html
 html
     head
-        link(rel='stylesheet', type='text/css', href='/js/local/EB+Garamond-Font.css')
-        link(rel='stylesheet', type='text/css', href='/js/local/realitycheck.css')
-        link(rel='stylesheet', type='text/css', href='/css/bootstrap.css')
-
-        script(type='text/javascript', src='/js/jquery.js')
-        script(type='text/javascript', src='/js/collapse.js')
-        script(type='text/javascript', src='/js/bootstrap.min.js')
-        script(type='text/javascript', src='/js/lodash.min.js')
-        script(type='text/javascript', src='/js/moment.min.js')
-
-        script(type='text/javascript', charset='utf8', src='/js/local/impressionTable.js')
-
+        include headers
         title facebook.tracking.exposed Your profile 
 
     body(onload="loadProfile(getSupporterId(), '#profileInfo');")
