--- a/sections/realitycheck/recent.jade
+++ b/sections/realitycheck/recent.jade
@@ -1,23 +1,7 @@
 doctype html
 html
     head
-        link(rel='stylesheet', type='text/css', href='/js/local/EB+Garamond-Font.css')
-        link(rel='stylesheet', type='text/css', href='/css/datatables.min.css')
-        link(rel='stylesheet', type='text/css', href='/css/bootstrap.css')
-        link(rel='stylesheet', type='text/css', href='/css/cal-heatmap.css')
-        link(rel='stylesheet', type='text/css', href='/js/local/realitycheck.css')
-
-        script(type='text/javascript', src='/js/jquery.js')
-        script(type='text/javascript', src='/js/d3.min.js')
-        script(type='text/javascript', src='/js/cal-heatmap.min.js')
-        script(type='text/javascript', src='/js/collapse.js')
-        script(type='text/javascript', src='/js/bootstrap.min.js')
-        script(type='text/javascript', src='/js/datatables.min.js')
-        script(type='text/javascript', src='/js/lodash.min.js')
-        script(type='text/javascript', src='/js/moment.min.js')
-
-        script(type='text/javascript', charset='utf8', src='/js/local/impressionTable.js')
-
+        include headers
         title facebook.tracking.exposed Your RealityCheck
 
     body(onload="loadCalmap(getSupporterId(), '#tendaycalmap');")
