new hostess and stuart working combo

--- a/sections/alarms.jade
+++ b/sections/alarms.jade
@@ -21,6 +21,9 @@ html
         .simpletext
             h2 Alarms
 
-        div(id="alarms")
+            form.center Password: 
+                input(id="password" name="password")
+
+            div(id="alarms")
 
     div.footer
