--- a/sections/team.jade
+++ b/sections/team.jade
@@ -9,7 +9,16 @@ html
         meta(charset="utf-8")
         meta(http-equiv="X-UA-Compatible" content="IE=edge")
         meta(name="viewport" content="width=device-width, initial-scale=1")
-        meta(name="keywords" content="facebook tracking exposed")
+        meta(name="keywords" content="inclusive team, worldwide community")
+
+        meta(property="og:title" content="facebook.tracking.exposed")
+        meta(property="og:type" content="website")
+        meta(property="og:description" content="The team needs to grow diverse and multicultural; The whole goal of facebook.tracking.exposed can be reached only through a global and inclusive community able to critic the algorithms from multiple points of views")
+        meta(property="og:url" content="https://facebook.tracking.exposed/about")
+        meta(property="og:image" content="https://facebook.tracking.exposed/images/fbtrex_logo-400x400.png")
+        meta(property="og:image:width" content="400")
+        meta(property="og:image:height" content="400")
+
         title About Us
 
     body
@@ -20,9 +29,16 @@ html
         .container-fluid
             p The team below is volunteer based. If you have questions, please mail 
                 b support﹫tracking・exposed; 
-                | We have a Facebook page, to organize experiments on the social media sphere, please join us on
+                | We have a Facebook page, to organize experiments on the social media sphere, please join us on 
                 a(href="https://www.facebook.com/personalizationalgorithm") Personalisation Algorithms
                 |.
+            .inclusive
+                h3 The team needs to grow diverse and multicultural; The whole goal of facebook.tracking.exposed can be reached only 
+                    b through a global and inclusive community able to critic the algorithms from multiple points of views. 
+                    |  The current team suffer this limit because the project, so far, has been presented mostly in italian and german
+                    i  
+                        a(href="/initiatives") hacker events
+                    |. This has been driven by opportunities and is not a self-segregating decision.
 
         .container-fluid
             h2 Contributor Team
