nicer font in all the pages

--- a/styles/index.styl
+++ b/styles/index.styl
@@ -3,6 +3,7 @@
   margin 0
   padding 0
   box-sizing border-box
+  font-family 'Work Sans'
 
 .left
   text-align left
@@ -38,10 +39,10 @@ p
   padding-right 10%
   padding-left 10%
   padding-bottom 2%
-  border-bottom #3b5999 0.7em solid
+  border-bottom #3c5a99 0.7em solid
 
   h2
-    border-left #3b5999 0.01em solid
+    border-left #3c5a99 0.01em solid
     padding-left 0.1em
 
 .polite-propaganda
@@ -49,7 +50,7 @@ p
   padding-left 10%
 
   h2
-    border-left #3b5999 0.01em solid
+    border-left #3c5a99 0.01em solid
     padding-left 0.1em
 
 .simpletext
@@ -135,32 +136,23 @@ p
   padding 5%
   width 100%
 
-.team-name
-  font-size 2em
-
-.team-role
-  color grey
-
-.team-twitter
-  font-size 0.9em
-
-.team-github
-  font-size 0.9em
-
-.teamblock
-  font-size 0.7em
-  margin-top 1em
-
-/* team members */
-.img-circle
-  border-radius 50%
-  margin 0 50%
-  transform translate(-50%,0%)
 
 /* unordered list */
 .fb--icon-list
   list-style-image url("/images/fbtrex16.png")
   font-size 1.3em
 
+.inclusive
+  border-top #fd5308 4px solid
+  border-left #3c5a99 4px solid
+  border-right #66b032 4px solid
+  padding-left 20px
+  padding-right 20px
+  text-align justify
 
+@font-face
+  font-family 'Work Sans'
+  font-style normal
+  font-weight 400
+  src local('Work Sans'), url(/js/local/WorkSans.ttf) format('truetype');
 
