--- a/sections/alpha.jade
+++ b/sections/alpha.jade
@@ -15,7 +15,7 @@ block alpha
       |!
     li We broke the previous visualisation, they will be restored and new will comes.
     li Four 
-      a(href="/talks") talks
+      a(href="/initiatives") talks
       |  has been done on this subject, helping us to reach 95 users in this phase.
     li We broke the previous visualisations! The database format is changed and the previous approach has stop to work by the end of November… showing the intrinsic limits of the prototypal technology :)
   img(src="/images/posttype-alpha.png")
