--- a/sections/backstory.jade
+++ b/sections/backstory.jade
@@ -25,23 +25,15 @@ html
     include header
     include navbar
 
-    div#vision
-      div.polite-propaganda
-        include vision
+    div.propaganda
+        h2 This page is about the removed sections, might be used to collect what get removed during the days? nobody knows.
 
-    div#mission
+    div#alpha
       div.propaganda
-        include mission
+        include alpha
 
-    div#background
+    div#getinvolved
       div.propaganda
-        include background
+        include getinvolved 
 
-    div#problemsInPA
-      div.propaganda
-        include problemsInPA
-
-    div#useit
-      div.propaganda
-        include useit
-
+    div.footer 
