extended with help points

--- a/sections/NetherlandsElections.jade
+++ b/sections/NetherlandsElections.jade
@@ -19,7 +19,6 @@ html
     include navbar
 
   div.container-fluid.highlight This message is intended for researchers and journalists concerned by Facebook influence over national election (or other politically sensitive topic, as referendum, strike, protests, campaigns …) 
-
   div.container-fluid.block
 
     p.paragraph 
@@ -31,21 +30,35 @@ html
     p.paragraph facebook.tracking.exposed is a tool designed to collect time-sensitive evidences from each users’ reality, the one created for them by personalization algorithms. Our goal is to provide a structured set of evidences  that can be used after the election for research and analysis.
 
   div.container-fluid.highlight How to use facebook.tracking.exposed
-
   div.container-fluid.block
 
     p.paragraph Just go to 
-      a(href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi") and install the web extension for Chrome 
-      | Login in your Facebook account and follow the 
-      b onboarding 
-      | procedure to join the project facebook.tracking.exposed
+      a(href="https://chrome.google.com/webstore/detail/facebooktrackingexposed/fnknflppefckhjhecbfigfhlcbmcnmmi") and install the web extension for Chrome
+      |  Login in your Facebook account and follow the 
+      b registration 
+      |  procedure to join the project facebook.tracking.exposed
 
-    p.paragraph The public post appearing in your timeline would be saved and available along all the other submitted data from the netherlands. This will allow to see, for example, which posts were promoted by whom; if the likes where growing homogeneously; if the comments share artificial or human patterns of distribution. There are a number of analysis that can be performed with this set of data; however, in order to ensure the validity of any analysis, it is crucial to spread the browser extension between an heterogeneous set of users. In this way, the social network realities of the users before the election can be properly recorder.
+    p.paragraph The public post appearing in your timeline would be saved and available along all the other submitted data from The Netherlands. This will allow to see, for example, which posts were promoted by whom; if the likes where growing homogeneously; if the comments share artificial or human patterns of distribution. There are a number of analysis that can be performed with this set of data; however, in order to ensure the validity of any analysis, it is crucial to spread the browser extension between an heterogeneous set of users. In this way, the social network realities of the users before the election can be properly recorder.
 
   div.container-fluid.highlight FAQ
-
   div.container-fluid.block
 
     p.paragraph If you've any question, feel free to write to 
       b support at tracking dot exposed
       |, questions in the public concern would be answered here.
+
+  div.container-fluid.highlight Want to help?
+  div.container-fluid.block
+
+    ul.fb--icon-list
+      li Copy editing: simplify this message and spread it across social media.
+      li Outreach: Compose some image, video, gif, posts, snap. whatever. The time is tight and the supporter group has to be diverse as possible.
+      li Translation in Dutch? well, probably 105% speaker a better english than mine, but this call for supporters might sounds more appropiate for a National election calls.
+      li Get in touch with PirateParty or other parties that might benefit on monitoring their outreach on the social media: joining this project help also for that
+      li Speaks with everyone has mentioned in the last three months:
+        i radicalisation in the Social Media
+        | or 
+        i Fake News
+        |: this project might shed some lights on the above political issues (just unfairly attributed to the technology), enabling a more informed debate on it.
+      li Wake up your French friend: this is a street test for their election monitoring
+
