updates in the parser operations

--- a/sections/NetherlandsElections.jade
+++ b/sections/NetherlandsElections.jade
@@ -53,11 +53,11 @@ html
     ul.fb--icon-list
       li Copy editing: simplify this message and spread it across social media.
       li Outreach: Compose some image, video, gif, posts, snap. whatever. The time is tight and the supporter group has to be diverse as possible.
-      li Translation in Dutch? well, probably 105% speaker a better english than mine, but this call for supporters might sounds more appropiate for a National election calls.
+      li Translation in Dutch? well, probably 105% of the Netherlanders speaks a better English than mine, but this call for support might sound more appropriate for a National election calls.
       li Get in touch with PirateParty or other parties that might benefit on monitoring their outreach on the social media: joining this project help also for that
       li Speaks with everyone has mentioned in the last three months:
         i radicalisation in the Social Media
-        | or 
+        |  or about 
         i Fake News
         |: this project might shed some lights on the above political issues (just unfairly attributed to the technology), enabling a more informed debate on it.
       li Wake up your French friend: this is a street test for their election monitoring
