--- a/sections/webscripts/realitycheck.css
+++ b/sections/webscripts/realitycheck.css
@@ -45,3 +45,13 @@
     margin: 5px;
 }
 
+.num {
+    width: 30px;
+    border-right: black 1px solid;
+    border-bottom: black 1px solid;
+    background-color: white;
+    text-align: right;
+    padding-right: 5px;
+    margin-right: 5px;
+    display: inline-block;
+}
